--- a/app.json
+++ b/app.json
@@ -1,8 +1,18 @@
 {
   "name": "heroku-ttyd",
   "description": "using Docker",
-  "repository": "https://github.com/history2/heroku-docker-nginx",
+  "repository": "https://github.com/Bascter-Main/heroku-docker-nginx",
   "logo": "https://upload.wikimedia.org/wikipedia/commons/c/c5/Nginx_logo.svg",
   "keywords": ["ttyd", "docker", "proxy"],
+  "env": {
+      "USER": {
+          "description": "username",
+          "value": "admin"
+      },
+      "PASS": {
+          "description": "password",
+          "value": "adminks123"
+      }
+    },
   "stack": "container"
 }
